# xeries

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  CITATION.cff  LICENSE  README.md  RELEASING.md  fix_tests.py  mkdocs.yml  pyproject.toml  ty.toml
.cursor/plans/: AGENTS.md  setup_python_library_faa2f43c.plan.md
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml
docs/: Initial_plan.md  contributing-sdd.md  getting-started.md  implementation_plan.md  index.md  task.md
docs/api/: adapters.md  importance.md  partitioners.md  reference.md
docs/architecture/: adapters.md  api_structure.md  core.md  hierarchy.md  importance.md  index.md  inheritance_diagrams.md  partitioners.md  structure.md  visualization.md
docs/tutorials/: quickstart.md
examples/: 01_quickstart.ipynb  02_skforecast_integration.ipynb  03_experiment_validation.ipynb  03_hierarchical_demand_forecasting.ipynb  04_synthetic_data.ipynb  README.md
examples/conditional_permutation/: 01_per_series_importance.ipynb  02_exogenous_features.ipynb  03_per_series_exog.ipynb  04_tree_partitioner.ipynb
examples/data/: competitive_products_dataset_with_ground_truth_multipliers.csv
examples/hierarchical/: 01_hierarchical_demand_forecasting.ipynb  02_per_series_shap.ipynb
examples/integrations/: 01_skforecast.ipynb
examples/quickstart/: 01_basic_usage.ipynb
specs/: README.md
specs/001-core-contracts/: spec.md
specs/002-partitioners/: spec.md
specs/003-conditional-permutation-importance/: spec.md
specs/004-framework-adapters/: spec.md
specs/005-conditional-shap/: spec.md
specs/006-hierarchical-explainer/: plan.md  spec.md  tasks.md
specs/007-visualization/: spec.md
src/tcpfi/: __init__.py  _version.py
src/tcpfi/adapters/: __init__.py  base.py  skforecast.py
src/tcpfi/core/: __init__.py  base.py  types.py
src/tcpfi/importance/: __init__.py  permutation.py  shap.py
src/tcpfi/partitioners/: __init__.py  manual.py  tree.py
src/tcpfi/visualization/: __init__.py  plots.py
src/timelens/: __init__.py  _version.py
src/timelens/adapters/: __init__.py  darts.py  skforecast.py  sklearn.py
src/timelens/analysis/: __init__.py  comparison.py  temporal.py
src/timelens/core/: __init__.py  base.py  types.py
src/timelens/dashboard/: __init__.py  core.py  report.py  results.py
src/timelens/dashboard/components/: __init__.py  causal.py  error_analysis.py  interactions.py  interpretability.py
src/timelens/importance/: __init__.py  causal.py  dropping.py  permutation.py  shap.py  shapiq.py
src/timelens/partitioners/: __init__.py  manual.py  tree.py
src/timelens/visualization/: __init__.py  plots.py
src/xeries/: __init__.py  _version.py
src/xeries/adapters/: __init__.py  base.py  darts.py  skforecast.py  sklearn.py
src/xeries/analysis/: __init__.py  comparison.py  error.py  significance.py  temporal.py
src/xeries/core/: __init__.py  base.py  types.py
src/xeries/dashboard/: __init__.py  core.py  report.py  results.py
src/xeries/dashboard/components/: __init__.py  causal.py  error_analysis.py  interactions.py  interpretability.py
src/xeries/hierarchy/: __init__.py  aggregator.py  definition.py  explainer.py  types.py
src/xeries/importance/: __init__.py  causal.py  dropping.py  permutation.py  shap.py  shapiq.py
src/xeries/partitioners/: __init__.py  manual.py  tree.py
src/xeries/visualization/: __init__.py  hierarchy_plots.py  plots.py
tests/: __init__.py  conftest.py  test_notebooks.py
tests/hierarchy/: __init__.py  test_aggregator.py  test_definition.py  test_explainer.py  test_types.py
tests/integration/: __init__.py  test_skforecast.py
tests/unit/: __init__.py  test_adapters.py  test_analysis.py  test_causal.py  test_dashboard.py  test_dropping.py  test_new_adapters.py  test_partitioners.py  test_permutation.py  test_shap.py  test_shapiq.py  test_skforecast_adapter.py  test_visualization.py
tests/visualization/: test_hierarchy_plots.py
