[project]
name = "tcpfi"
version = "0.1.0"
description = "Conditional Feature Importance for Multi-Time Series Forecasting"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "shap>=0.44",
    "joblib>=1.3",
]

[project.optional-dependencies]
skforecast = ["skforecast>=0.13"]
all = ["tcpfi[skforecast]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pandas-stubs",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "nbclient>=0.10",
    "nbval>=0.11",
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/thec0dewriter/time_conditional_pfi"
Documentation = "https://thec0dewriter.github.io/time_conditional_pfi"
Repository = "https://github.com/thec0dewriter/time_conditional_pfi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcpfi"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["tcpfi"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = ["shap.*", "skforecast.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=tcpfi --cov-report=term-missing --cov-report=xml"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests requiring external libs",
    "notebook: notebook tests",
]
norecursedirs = [".ipynb_checkpoints"]

[tool.coverage.run]
source = ["src/tcpfi"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
