[project]
name = "timelens"
dynamic = ["version"]
description = "Conditional Feature Importance for Multi-Time Series Forecasting"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "thec0dewriter" }]
maintainers = [{ name = "thec0dewriter" }]
keywords = [
    "feature-importance",
    "time-series",
    "forecasting",
    "permutation-importance",
    "shap",
    "explainability",
    "machine-learning",
    "multi-series",
    "skforecast",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    "shap>=0.49.1",
    "numpy>=2.2.6",
    "joblib>=1.5.3",
]

[project.optional-dependencies]
skforecast = ["skforecast>=0.21.0"]
all = ["timelens[skforecast]"]

notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "nbclient>=0.10",
    "nbval>=0.11",
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/thec0dewriter/timelens"
Documentation = "https://thec0dewriter.github.io/timelens"
Repository = "https://github.com/thec0dewriter/timelens"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/timelens/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/timelens"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["timelens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=timelens --cov-report=term-missing --cov-report=xml"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests requiring external libs",
    "notebook: notebook tests",
]
norecursedirs = [".ipynb_checkpoints"]

[tool.coverage.run]
source = ["src/timelens"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ty>=0.0.24",
    "pre-commit>=3.7",
    "pandas-stubs",
    "ruff>=0.15.6",
    "skforecast>=0.21.0",
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "nbclient>=0.10",
    "nbval>=0.11",
    "matplotlib>=3.8",
    "lightgbm>=4.6.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=0.25",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "nbclient>=0.10",
    "nbval>=0.11",
    "matplotlib>=3.8",
]
