[project]
name = "xeries"
dynamic = ["version"]
description = "Forecasting explanations for global forecasters, with support for skforecast and more."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Mátyás Kuti-Kreszács", email = "kutikmatyas@gmail.com" }]
maintainers = [{ name = "Mátyás Kuti-Kreszács", email = "kutikmatyas@gmail.com" }]
keywords = [
    "feature-importance",
    "time-series",
    "forecasting",
    "permutation-importance",
    "shap",
    "explainability",
    "machine-learning",
    "multi-series",
    "skforecast",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    "shap>=0.49.1",
    "numpy>=2.2.6",
    "joblib>=1.5.3",
]

[project.optional-dependencies]
skforecast = ["skforecast>=0.21.0"]
shapiq = ["shapiq>=1.0"]
causal-discovery = ["causal-learn>=0.1.3"]
darts = ["u8darts>=0.34"]
dashboard = ["jinja2>=3.1"]
# Note: causal deps (dowhy, econml) are not listed here because econml
# requires shap<0.49.0, conflicting with shap>=0.49.1 in core deps.
# Users should install them manually in a compatible environment.
all = ["xeries[skforecast,shapiq,causal-discovery,darts,dashboard]"]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "nbclient>=0.10",
    "nbval>=0.11",
    "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/thec0dewriter/xeries"
Documentation = "https://thec0dewriter.github.io/xeries"
Repository = "https://github.com/thec0dewriter/xeries"
DOI = "https://doi.org/10.5281/zenodo.19482748"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/xeries/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/xeries"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["xeries"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=xeries --cov-report=term-missing --cov-report=xml"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests requiring external libs",
    "notebook: notebook tests",
]
norecursedirs = [".ipynb_checkpoints"]

[tool.coverage.run]
source = ["src/xeries"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.semantic_release]
version_variable = "src/xeries/_version.py:__version__"
version_pattern = '^__version__ = "{version}"'
version_source = "tag"
branch = "main"
commit_parser = "angular"
prerelease = false
upload_to_pypi = false
allow_zero_version = true
build_command = "pip install build && python -m build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ty>=0.0.24",
    "pre-commit>=3.7",
    "pandas-stubs",
    "ruff>=0.15.6",
    "skforecast>=0.21.0",
    "lightgbm>=4.6.0",
    "python-semantic-release>=9.8.0",
    {include-group = "notebooks"},
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=0.25",
    "mkdocs-jupyter>=0.25",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbformat>=5.10",
    "nbclient>=0.10",
    "nbval>=0.11",
    "matplotlib>=3.8",
]
